# qr_gen

./: CMakeLists.txt  README.md
include/: draw_code.hpp  main.hpp  qr_code.hpp
src/: draw_code.cpp  main.cpp  qr_code.cpp
